infrastructure/opencost/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opencost
  labels:
    istio.io/dataplane-mode: ambient
